[gd_scene load_steps=9 format=3 uid="uid://btbnapu3ehhaa"]

[ext_resource type="Script" path="res://Towers/ArrowTower/ArrowTower.gd" id="1_x3xn3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cer2r"]
albedo_color = Color(0.811765, 0.662745, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_jj5yl"]
material = SubResource("StandardMaterial3D_cer2r")
size = Vector3(3, 7, 3)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2vxro"]
height = 7.0
radius = 2.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ed0cm"]
height = 30.0
radius = 30.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c314f"]
blend_mode = 1
shading_mode = 0
albedo_color = Color(0, 0.713726, 0.835294, 1)

[sub_resource type="TorusMesh" id="TorusMesh_eb2l2"]
material = SubResource("StandardMaterial3D_c314f")
inner_radius = 29.0
outer_radius = 30.0

[sub_resource type="TorusMesh" id="TorusMesh_jin1s"]
inner_radius = 2.5
outer_radius = 3.0

[node name="ArrowTower" type="Area3D" groups=["tower"]]
script = ExtResource("1_x3xn3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.33012, 0)
mesh = SubResource("BoxMesh_jj5yl")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.33012, 0)
shape = SubResource("CylinderShape3D_2vxro")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.94758, 0)

[node name="AttackRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRange"]
shape = SubResource("CylinderShape3D_ed0cm")

[node name="AreaMesh" type="MeshInstance3D" parent="AttackRange"]
visible = false
mesh = SubResource("TorusMesh_eb2l2")

[node name="Timer" type="Timer" parent="."]

[node name="Highlight" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("TorusMesh_jin1s")

[connection signal="area_entered" from="AttackRange" to="." method="_on_attack_range_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_attack_range_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
